tests/interpreter/fail/007-large.hyg
assert( 2 > 4.0f);
assert( 0 > 3);
assert(1.0f > 3.14f)